--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Contact/templates/store_map.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Contact/templates/store_map.phtml
@@ -14,16 +14,16 @@
 	$configLat = $_optionHelper->getConfig('general_section/contact_us/latitude');
 	$configLng = $_optionHelper->getConfig('general_section/contact_us/longitude');
 	$key = $_optionHelper->getConfig('general_section/contact_us/key');
-	
+
 	if( ($configLat != '') && ($configLng != '') ){
 		$lat = $configLat; $lng = $configLng;
 	}else{
 		$mapJson = file_get_contents('http://maps.google.com/maps/api/geocode/json?address='.urlencode($address).'&sensor=false');
 		$mapObject = json_decode($mapJson);
 		$lat = $mapObject->results[0]->geometry->location->lat;
-		$lng = $mapObject->results[0]->geometry->location->lng; 
+		$lng = $mapObject->results[0]->geometry->location->lng;
 	}
-	
+
 	$zoom = $_optionHelper->getConfig('general_section/contact_us/zoom');
 ?>
 <?php if($showMap): ?>
@@ -55,3 +55,27 @@ function initialize() {
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 <?php endif ?>
+<style>
+    .contact-small-title {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 12px;
+    }
+    .contact-word {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 16px;
+    }
+</style>
+<div>
+    <div class="contact-small-title">Business Hours:</div>
+    <div class="contact-word">8:00 AM - 5:00 PM PST, Mon - Fri (Except Holidays)</div>
+    <div class="contact-small-title">Call Us:</div>
+    <div class="contact-word">1-888-352-3558 (Business Hours)</div>
+    <div class="contact-small-title">Email Us:</div>
+    <div class="contact-word">service@water-filter.com (24/7)</div>
+    <div class="contact-small-title">Our Address:</div>
+    <div class="contact-word">US Business Office: 17910 E Ajax Circle, City of Industry, CA 91748</div>
+    <div class="contact-word">CN Manufacturer: No. 13, Yishengbai Road, Environmental Protection Industry Zone, Jimo, Qingdao, 266201, China</div>
+</div>
