--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/checkout/checkout-agreements.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/checkout/checkout-agreements.html
@@ -53,7 +53,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')}"
                         title="Place Order">
-                <span data-bind="i18n: 'Place Order'">Place Order</span>
+                <span data-bind="i18n: 'Proceed to Checkout'">Place Order</span>
             </button>
         </div>
     </div>
