--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
@@ -1,3 +1,116 @@
+<style>
+    .cdz-login-form-dropdown {
+        padding: 24px 20px 40px 20px;
+    }
+    .custom-sytle-loginmini-title {
+        font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 150%;
+    color: #333333;
+    margin-bottom: 24px;
+    }
+    .custom-style-loginmini-signin {
+            padding: 11px !important;
+            border: none !important;
+        }
+        .block-customer-login .account-social-login .actions-toolbar.social-btn {
+    width: 100%;
+}
+.block-customer-login .login .secondary {
+    text-align: left;
+    display: block;
+
+    margin: 0;
+    margin-bottom: 24px;
+}
+.block-customer-login .login .secondary  .remind span {
+    color: #1979c3;
+}
+.custom-style-loginmini-infotext {
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+    margin-bottom: 8px !important;
+}
+.custom-style-loginmini-or {
+    display: flex;
+    justify-content: space-around;
+}
+.custom-style-loginmini-or-2 {
+    position: relative;
+    top: -8px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #333333;
+}
+.custom-style-loginmini-or-1, .custom-style-loginmini-or-3 {
+    width: 160px;
+    border-top: 1px solid #E2E2E2;
+}
+.custom-style-loginmini-create {
+    padding-top: 24px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+    border-top: 1px solid #e2e2e2;
+}
+.custom-style-loginmini-create-a {
+    color: #10477d !important;
+}
+#cdz-login-form-dropdown > div > div > div.block.social-login-authentication-channel.account-social-login {
+    margin-bottom: 24px !important;
+}
+.custom-style-loginmini-form {
+    margin-bottom: 24px;
+}
+
+
+
+
+
+
+
+
+
+
+        .block-customer-login .social-btn .btn-social {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #333333;
+    background: none;
+    text-align: center;
+    border: 1px solid #e1e1e1;
+    padding-top: 11px;
+    padding-bottom: 11px;
+}
+
+        .custom-style-mini-google, .custom-style-mini-facebook {
+            border-right: none !important;
+        }
+        .custom-style-mini-google {
+            left: 48px !important;
+        }
+        .custom-style-mini-facebook {
+            left: 41px !important;
+        }
+        .custom-style-mini-facebook:before {
+    font-family: 'icomoon';
+    content: "\e935";
+    color: #155DA4;
+}
+</style>
+
 <?php
 /**
  * Copyright © 2015 Magento. All rights reserved.
@@ -18,35 +131,44 @@
 ?>
 <div class="block block-customer-login">
     <div class="block-content" >
-        <?php echo $block->getChildHtml('form_additional_social_login'); ?>
-        <form class="form form-login"
+        <div class="custom-sytle-loginmini-title">Sign In</div>   
+        <form class="form form-login custom-style-loginmini-form"
               action="<?php /* @escapeNotVerified */ echo $block->getPostActionUrl() ?>"
               method="post"
               data-mage-init='{"validation":{}}'>
             <?php echo $block->getBlockHtml('formkey'); ?>
             <fieldset class="fieldset login" data-hasrequired="<?php /* @escapeNotVerified */ echo __('* Required Fields') ?>">
                 <div class="field email required">
-                    <!--<label class="label" for="email"><span><?php /* @escapeNotVerified */ echo __('Email') ?></span></label>-->
+                    <label class="label custom-style-loginmini-infotext" for="email"><span><?php /* @escapeNotVerified */ echo __('Email') ?></span></label>
                     <div class="control">
-                        <input placeholder="<?php /* @escapeNotVerified */ echo __('Email') ?>" name="login[username]" value="<?php echo $block->escapeHtml($block->getUsername()) ?>" <?php if ($block->isAutocompleteDisabled()) :?> autocomplete="off"<?php endif; ?> type="email" class="input-text" title="<?php /* @escapeNotVerified */ echo __('Email') ?>" data-validate="{required:true, 'validate-email':true}"/>
+                        <input  name="login[username]" value="<?php echo $block->escapeHtml($block->getUsername()) ?>" <?php if ($block->isAutocompleteDisabled()) :?> autocomplete="off"<?php endif; ?> type="email" class="input-text" title="<?php /* @escapeNotVerified */ echo __('Email') ?>" data-validate="{required:true, 'validate-email':true}"/>
                     </div>
                 </div>
                 <div class="field password required">
-                    <!--<label for="pass" class="label"><span><?php /* @escapeNotVerified */ echo __('Password') ?></span></label>-->
+                    <label for="pass" class="label custom-style-loginmini-infotext"><span><?php /* @escapeNotVerified */ echo __('Password') ?></span></label>
                     <div class="control">
-                        <input placeholder="<?php /* @escapeNotVerified */ echo __('Password') ?>" name="login[password]" type="password" <?php if ($block->isAutocompleteDisabled()) :?> autocomplete="off"<?php endif; ?> class="input-text" title="<?php /* @escapeNotVerified */ echo __('Password') ?>" data-validate="{required:true, 'validate-password':true}"/>
+                        <input  name="login[password]" type="password" <?php if ($block->isAutocompleteDisabled()) :?> autocomplete="off"<?php endif; ?> class="input-text" title="<?php /* @escapeNotVerified */ echo __('Password') ?>" data-validate="{required:true, 'validate-password':true}"/>
                     </div>
                 </div>
+                <div class="secondary">
+					<a class="action remind" href="<?php /* @escapeNotVerified */ echo $block->getForgotPasswordUrl() ?>"><span><?php /* @escapeNotVerified */ echo __('Forgot Your Password?') ?></span></a>
+				</div>
                 <?php echo $block->getChildHtml('form_additional_info'); ?>
                 <div class="actions-toolbar">
                     <div class="">
-						<button type="submit" class="action login primary" name="send"><span><?php /* @escapeNotVerified */ echo __('Login') ?></span></button></div>
-						<a class="action create primary" href="<?php echo $this->getUrl('customer/account/create') ?>"><span><?php echo __('Sign up') ?></span></a>
-					<div class="secondary">
-					<a class="action remind" href="<?php /* @escapeNotVerified */ echo $block->getForgotPasswordUrl() ?>"><span><?php /* @escapeNotVerified */ echo __('Forgot Your Password?') ?></span></a>
-					</div>
+                    <button type="submit" class="action login primary  custom-style-loginmini-signin" name="send"><span><?php /* @escapeNotVerified */ echo __('Sign In') ?></span></button></div>  
                 </div>
             </fieldset>
         </form>
+        <div class="custom-style-loginmini-or">
+            <div class="custom-style-loginmini-or-1"></div>
+            <div class="custom-style-loginmini-or-2">or</div>
+            <div class="custom-style-loginmini-or-3"></div>
+        </div>
+        <?php echo $block->getChildHtml('form_additional_social_login'); ?>
+        <div class="custom-style-loginmini-create">
+             <span>New to Waterdrop?</span>
+             <a class="custom-style-loginmini-create-a" href="#"> <span >Create an Account</span> &nbsp&nbsp></a>
+        </div>
     </div>
 </div>
