--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/forgotpassword.phtml
@@ -1,3 +1,61 @@
+<style>
+    .custom-style-forgotpassword-form {
+        padding: 24px 20px 40px 20px !important;
+    }
+    .custom-style-forgotpassword-title {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 150%;
+        color: #333333;
+        margin-bottom: 24px;
+    }
+    .custom-style-forgotpassword-email {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: #333333;
+        margin-bottom: 8px;
+    }
+    .custom-style-forgotpassword-emailbox {
+        margin-bottom: 24px;
+    }
+    .custom-style-forgotpassword-emailbox .control input {
+        border-radius: 4px;
+    }
+    #captcha_user_forgotpassword {
+        border-radius: 4px;
+    }
+    #captcha-container-user_forgotpassword > div > button {
+        border-radius: 4px;
+    }
+    #captcha-container-user_forgotpassword > div > button:hover {
+        color: #ffffff;
+        background-color: #155da4;
+    }
+    #form-validate > fieldset {
+        margin-bottom: 24px;
+    }
+    #form-validate > div.actions-toolbar > div.primary > button{
+        width: 100%;
+        height: 40px;
+        margin: 0;
+        border: none;
+        border-radius: 4px;
+    }
+    #form-validate > div.actions-toolbar > div.primary > button:hover {
+        color: #ffffff;
+        background: #155da4;
+    }
+    @media screen and ( max-width: 768px ) {
+        #maincontent {
+            margin-top: 8px;
+            margin-bottom: 0;
+        }
+    }
+</style>
+
 <?php
 /**
  * Copyright © 2016 Magento. All rights reserved.
@@ -9,23 +67,22 @@
 // @codingStandardsIgnoreFile
 
 ?>
-<div class="forgot-title">
-	<strong id="block-customer-login-heading">
-	<?php /* @escapeNotVerified */ echo __('Forgot Password') ?>
-	</strong>
-	<div class="field note"><?php /* @escapeNotVerified */ echo __('Please enter your email address below to receive a password reset link.'); ?></div>
-</div>
-<form class="form password forget"
+
+<form class="form password forget custom-style-forgotpassword-form"
       action="<?php /* @escapeNotVerified */ echo $block->getUrl('*/*/forgotpasswordpost') ?>"
       method="post"
       id="form-validate"
       data-mage-init='{"validation":{}}'>
+
+    <div class="custom-style-forgotpassword-title">Forgot Password</div>
+
     <fieldset class="fieldset" data-hasrequired="<?php /* @escapeNotVerified */ echo __('* Required Fields') ?>">
         
-        <div class="field email required">
+        <div class="field email required custom-style-forgotpassword-emailbox">
+            <div class="custom-style-forgotpassword-email">Email</div>
             <label for="email_address" class="label"><span><?php /* @escapeNotVerified */ echo __('Email') ?></span></label>
             <div class="control">
-                <input placeholder="<?php /* @escapeNotVerified */ echo __('Enter your email address') ?>" type="email" name="email" alt="email" id="email_address" class="input-text" value="<?php echo $block->escapeHtml($block->getEmailValue()) ?>" data-validate="{required:true, 'validate-email':true}">
+                <input type="email" name="email" alt="email" id="email_address" class="input-text" value="<?php echo $block->escapeHtml($block->getEmailValue()) ?>" data-validate="{required:true, 'validate-email':true}">
             </div>
         </div>
         <?php echo $block->getChildHtml('form_additional_info'); ?>
